[gd_scene load_steps=3 format=3 uid="uid://bhgwo3lkrssho"]

[ext_resource type="Script" uid="uid://bqpc568bnqysn" path="res://Assets/Menus/Level Menu/level_menu.gd" id="1_4pf6b"]
[ext_resource type="FontFile" uid="uid://d3pduwwgusfuc" path="res://Assets/Fonts/NormalFont.ttf" id="1_m71ff"]

[node name="level_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pf6b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Test Area" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_m71ff")
text = "TEST  AREA
"

[node name="NEW GAME" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m71ff")
text = "NEW  GAME
"

[node name="LOAD GAME" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m71ff")
text = "LOAD  GAME
"

[node name="BACK" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m71ff")
text = "BACK
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Test Area" to="." method="_on_test_area_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NEW GAME" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LOAD GAME" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BACK" to="." method="_on_back_pressed"]
